bitfields/tests/compile_error_cases/errors/bitfield_field_default_invalid_suffix.stderr
error[E0600]: cannot apply unary operator `-` to type `u8`
 --> tests/compile_error_cases/errors/bitfield_field_default_invalid_suffix.rs:3:1
  |
3 | #[bitfield(u8)]
  | ^^^^^^^^^^^^^^^ cannot apply unary operator `-`
  |
  = note: unsigned values cannot be negated
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you may have meant the maximum value of `u8`
  |
3 - #[bitfield(u8)]
3 + u8::MAX
  |
